added view students profile section

--- a/templates/administration/index.html
+++ b/templates/administration/index.html
@@ -369,7 +369,7 @@ Administration -> Home
                             </div>
                             <div class="timeline-badge-wrap d-flex flex-column align-items-center">
                                 <span
-                                    class="timeline-badge border-2 border border-{{ session.get_meeting_status.color }} flex-shrink-0 my-8"></span>
+                                    class="timeline-badge border-2 border-{{ session.get_meeting_status.color }} flex-shrink-0 my-8"></span>
                                 <span class="timeline-badge-border d-block flex-shrink-0"></span>
                             </div>
                             <div class="timeline-desc fs-3  mt-n1">{{ session.session_time }}
@@ -406,7 +406,7 @@ Administration -> Home
                         <li class="timeline-item d-flex position-relative overflow-hidden">
                             <div class="timeline-time  flex-shrink-0 text-end">Not Available</div>
                             <div class="timeline-badge-wrap d-flex flex-column align-items-center">
-                                <span class="timeline-badge border-2 border border-primary flex-shrink-0 my-8"></span>
+                                <span class="timeline-badge border-2 border-primary flex-shrink-0 my-8"></span>
                                 <span class="timeline-badge-border d-block flex-shrink-0"></span>
                             </div>
                             <div class="timeline-desc fs-3  mt-n1 fw-semibold">Coming Soon!
@@ -415,7 +415,7 @@ Administration -> Home
                         <li class="timeline-item d-flex position-relative overflow-hidden">
                             <div class="timeline-time  flex-shrink-0 text-end">Not Available</div>
                             <div class="timeline-badge-wrap d-flex flex-column align-items-center">
-                                <span class="timeline-badge border-2 border border-success flex-shrink-0 my-8"></span>
+                                <span class="timeline-badge border-2  border-success flex-shrink-0 my-8"></span>
                                 <span class="timeline-badge-border d-block flex-shrink-0"></span>
                             </div>
                             <div class="timeline-desc fs-3  mt-n1 fw-semibold">Coming Soon!
@@ -424,7 +424,7 @@ Administration -> Home
                         <li class="timeline-item d-flex position-relative overflow-hidden">
                             <div class="timeline-time  flex-shrink-0 text-end">Not Available</div>
                             <div class="timeline-badge-wrap d-flex flex-column align-items-center">
-                                <span class="timeline-badge border-2 border border-danger flex-shrink-0 my-8"></span>
+                                <span class="timeline-badge border-2  border-danger flex-shrink-0 my-8"></span>
                                 <span class="timeline-badge-border d-block flex-shrink-0"></span>
                             </div>
                             <div class="timeline-desc fs-3  mt-n1 fw-semibold">Coming Soon!
@@ -433,7 +433,7 @@ Administration -> Home
                         <li class="timeline-item d-flex position-relative overflow-hidden">
                             <div class="timeline-time  flex-shrink-0 text-end">Not Available</div>
                             <div class="timeline-badge-wrap d-flex flex-column align-items-center">
-                                <span class="timeline-badge border-2 border border-warning flex-shrink-0 my-8"></span>
+                                <span class="timeline-badge border-2  border-warning flex-shrink-0 my-8"></span>
                             </div>
                             <div class="timeline-desc fs-3  mt-n1 fw-semibold">Coming Soon!
                             </div>
