--- a/templates/administration/all_students.html
+++ b/templates/administration/all_students.html
@@ -154,7 +154,11 @@ Administration -> Students
                         <th class="border-bottom-0">
                             <h6 class="fw-semibold mb-0"> Contacts</th> </h6>
                         <th class="border-bottom-0">
-                            <h6 class="fw-semibold mb-0"> Action</th> </h6>
+                            <h6 class="fw-semibold mb-0"> Action#1</th> </h6>
+                        </th>
+                        <th class="border-bottom-0">
+                            <h6 class="fw-semibold mb-0"> Action#2</th> </h6>
+                        </th>
                     </tr>
                 </thead>
                 <tbody>
@@ -206,6 +210,11 @@ Administration -> Students
                     </button>
                 </td>
 
+                 <td class="border-bottom-0">
+                        <a href="/administration/view_student_profile/${student.id}" class="btn btn-sm btn-outline-secondary">
+                        View Student Profile
+                    </a>
+                </td>
 
                 </tr>
             `;
